# stream_modern

./: meson.build  powerpc64.ini  powerpc64le.ini
include/: stream.hpp
src/: stream.cpp
tests/: test_stream.cpp
